crates/keron-lang/tests/corpus/errors/check/secret_concat_with_string.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: `+` requires `Int`, `Double`, or `String` operands, found `String` and `Secret`
  --> 3:22
  |
3 | val header: String = "Bearer " + token
  |                      ^^^^^^^^^^^^^^^^^
